--- a/CaterDAL/CaterDAL.csproj
+++ b/CaterDAL/CaterDAL.csproj
@@ -51,6 +51,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MemberInfoDAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlHelperSqlite.cs" />
     <Compile Include="UserInfoDAL.cs" />
