会员界面完成

--- a/CaterModel/CaterModel.csproj
+++ b/CaterModel/CaterModel.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MemberInfo.cs" />
+    <Compile Include="MemmberType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserInfo.cs" />
   </ItemGroup>
