--- a/CaterBLL/CaterBLL.csproj
+++ b/CaterBLL/CaterBLL.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MemberInfoBLL.cs" />
+    <Compile Include="MemmberTypeBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserInfoBLL.cs" />
   </ItemGroup>
