--- a/CaterDAL/CaterDAL.csproj
+++ b/CaterDAL/CaterDAL.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MemberInfoDAL.cs" />
+    <Compile Include="MemmberTypeDALL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlHelperSqlite.cs" />
     <Compile Include="UserInfoDAL.cs" />
